--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dayjs": "^1.10.7",
     "isomorphic-unfetch": "^3.1.0",
     "normalize.css": "^8.0.1",
+    "posthog-js": "^1.215.1",
     "react": "^16.14.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^16.14.0",
