--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/Zohair-coder/caglarturali.github.io"
   },
-  "homepage": "https://www.zohair.dev",
+  "homepage": "https://www.zohair.dev/",
   "license": "GNU GPLv3",
   "scripts": {
     "start": "craco start",
